# squeeze-evolve

./: .gitignore  .gitmodules  LICENSE  README.md  pyproject.toml
.claude-plugin/: marketplace.json
benchmarks/: README.md  prepare_data.py
benchmarks/aime25/: register.py  run.sh
benchmarks/aime25/configs/: example.yaml  example_120b.yaml
benchmarks/babyvision/: register.py
benchmarks/babyvision/configs/: example.yaml
benchmarks/gpqa_diamond/: register.py  run.sh
benchmarks/gpqa_diamond/configs/: example.yaml
benchmarks/hmmt25/: register.py  run.sh
benchmarks/hmmt25/configs/: example.yaml
benchmarks/mmmu_pro/: register.py
benchmarks/mmmu_pro/configs/: example.yaml
data/: README.md
data/aime25/: test.parquet
data/gpqa_diamond/: test.parquet
data/hmmt25/: test.parquet
plugins/squeeze-evolve/: README.md
plugins/squeeze-evolve/.claude-plugin/: plugin.json
plugins/squeeze-evolve/commands/: ask.md
plugins/squeeze-evolve/workflows/: squeeze-evolve.js
scripts/: README.md
src/squeeze_evolve/: README.md  __init__.py  common.py
src/squeeze_evolve/algorithm/: __init__.py  metrics.py  operators.py  orchestrator.py  utils.py
src/squeeze_evolve/api/: __init__.py  cli.py  server.py
src/squeeze_evolve/core/: __init__.py  backend.py  config.py  data.py  registry.py  storage.py  types.py
tests/: README.md  conftest.py  test_backend.py  test_config.py  test_data.py  test_metrics.py  test_operators.py  test_server.py  test_storage.py
